a little more clean-up

--- a/src/app/shared/link/link.component.html
+++ b/src/app/shared/link/link.component.html
@@ -1,3 +1,3 @@
 <ul class="list-group">
-    <a *ngFor='let link of linkList' class="list-group-item" target="{{link.target}}" title="{{link.title}}" [href]='link.url'>{{link.title}}</a>
+    <a *ngFor='let link of linkList' class="list-group-item" target="_blank" title="{{link.title}}" [href]='link.url'>{{link.title}}</a>
 </ul>
