Cleanup, added colors & fixing category with no links.

--- a/src/app/links-panel/links-panel.component.html
+++ b/src/app/links-panel/links-panel.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-{{this.panelWidth}}" *ngIf='links.length'>
+<div class="col-md-{{this.panelWidth}}">
     <div class="panel panel-info">
         <div class="panel-heading"><span class="glyphicon glyphicon-eye-open"></span> &nbsp; <strong>{{PanelTitle}}</strong>
             <span class="count"></span>
