--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,15 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    background-color: navy;
 }
 
 .btn { font-weight: 700; }
 
 .container {
     background-color: white;
-    padding: 25px 5px 5px 5px; /* width: 1024px !important; */
+    padding: 25px 5px 5px 5px;
+    /* width: 1024px !important; */
 }
 
 .container-flexible {
@@ -22,11 +24,42 @@ body {
     padding: 25px !important;
 }
 
-.panel-heading { cursor: pointer; }
-.panel-body { min-height: 60px !important; }
-.panel-body:after { margin: -10px; padding: -10px; }
-.panel-footer { text-align: right; display: none; }
-.panel-footer:after { margin: -10px; padding: -10px; }
-.list-group { height: 193px !important; max-height: 193px !important; overflow-y: auto !important; }
-.list-group-item { padding: 7px 10px; font-size: 9pt; }
-.new_item { font-weight: 700; font-style: italic; color: red; }
+.panel-heading {
+     cursor: pointer;
+}
+
+.panel-body {
+    min-height: 60px !important;
+}
+
+.panel-body:after {
+    margin: -10px;
+    padding: -10px;
+}
+
+.panel-footer {
+    text-align: right;
+    display: none;
+}
+
+.panel-footer:after {
+    margin: -10px;
+    padding: -10px;
+}
+
+.list-group {
+    height: 193px !important;
+    max-height: 193px !important;
+    overflow-y: auto !important;
+}
+
+.list-group-item { 
+    padding: 7px 10px;
+    font-size: 9pt;
+}
+
+.new_item {
+    font-weight: 700;
+    font-style: italic;
+    color: red;
+}
