Adding dynamicism, removing code, bugs, etc.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,16 @@
   </div>
   <div class="panel-body" style="background-color: silver;">
     <div class="row">
-      <app-links-panel [filteredLinks]='category1List' [PanelTitle]='category1Title'></app-links-panel>
-      <app-links-panel [filteredLinks]='category2List' [PanelTitle]='category2Title'></app-links-panel>
-      <app-links-panel [filteredLinks]='category3List' [PanelTitle]='category3Title'></app-links-panel>
-      <app-links-panel [filteredLinks]='category4List' [PanelTitle]='category4Title'></app-links-panel>
+      <app-links-panel [filteredLinks]='category1List'></app-links-panel>
+      <app-links-panel [filteredLinks]='category2List'></app-links-panel>
+      <app-links-panel [filteredLinks]='category3List'></app-links-panel>
+      <app-links-panel [filteredLinks]='category4List'></app-links-panel>
     </div>
     <div class="row">
-      <app-links-panel [filteredLinks]='category5List' [PanelTitle]='category5Title'></app-links-panel>
-      <app-links-panel [filteredLinks]='category6List' [PanelTitle]='category6Title'></app-links-panel>
-      <app-links-panel [filteredLinks]='category7List' [PanelTitle]='category7Title'></app-links-panel>
-      <app-links-panel [filteredLinks]='category8List' [PanelTitle]='category8Title'></app-links-panel>
+      <app-links-panel [filteredLinks]='category5List'></app-links-panel>
+      <app-links-panel [filteredLinks]='category6List'></app-links-panel>
+      <app-links-panel [filteredLinks]='category7List'></app-links-panel>
+      <app-links-panel [filteredLinks]='category8List'></app-links-panel>
     </div>
   </div>
   <div class="panel-footer">
