--- a/src/app/links-panel/links-panel.component.html
+++ b/src/app/links-panel/links-panel.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-{{this.panelWidth}}">
     <div class="panel panel-info">
-        <div class="panel-heading"><span class="glyphicon glyphicon-eye-open"></span> &nbsp; <strong>{{PanelTitle}}</strong>
+        <div class="panel-heading"><span class="glyphicon glyphicon-eye-open"></span> &nbsp; <strong>{{panelTitle}}</strong>
             <span class="count"></span>
         </div>
         <div class="panel-body">
