Clean-up, shoelace tightening, and starting on global search

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,10 @@ body {
     font-style: italic;
     color: red;
 }
+
+.count {
+    padding: 0 0 0 5px;
+    font-weight: 700;
+    font-style: italic;
+    color: black;
+}
