--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,13 @@
   <div class="panel-heading">
     <strong>M.U.L.T.I.P.A.S.S. : My Utility Links To Important Places And Similar Stuff</strong>
   </div>
+   <div class="panel-body">
+    <div class="row">
+      <div class="col-md-12">
+        <input id="txtGlobalFilter" type="text" class="form-control" placeholder="Type here to filter displayed links" />
+      </div>
+    </div>
+  </div>
   <div class="panel-body" style="background-color: silver;">
     <div class="row">
       <app-links-panel [filteredLinks]='category1List'></app-links-panel>
@@ -17,6 +24,6 @@
     </div>
   </div>
   <div class="panel-footer">
-    &copy; ME, Dammit!
+    &copy; ME, Dammit! ;-)
   </div>
 </div>
