adding global search, clean-up & misc rewiring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,13 @@
   <div class="panel-heading">
     <strong>M.U.L.T.I.P.A.S.S. : My Utility Links To Important Places And Similar Stuff</strong>
   </div>
-   <div class="panel-body">
-    <div class="row">
-      <div class="col-md-12">
-        <input id="txtGlobalFilter" type="text" class="form-control" placeholder="Type here to filter displayed links" />
-      </div>
-    </div>
-  </div>
   <div class="panel-body" style="background-color: silver;">
+    <app-global-search (searchValue)="handleSearch($event)"></app-global-search>
     <div class="row">
       <app-links-panel [filteredLinks]='category1List'></app-links-panel>
       <app-links-panel [filteredLinks]='category2List'></app-links-panel>
       <app-links-panel [filteredLinks]='category3List'></app-links-panel>
       <app-links-panel [filteredLinks]='category4List'></app-links-panel>
-    </div>
-    <div class="row">
       <app-links-panel [filteredLinks]='category5List'></app-links-panel>
       <app-links-panel [filteredLinks]='category6List'></app-links-panel>
       <app-links-panel [filteredLinks]='category7List'></app-links-panel>
