--- a/src/app/links-panel/links-panel.component.html
+++ b/src/app/links-panel/links-panel.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-{{this.panelWidth}}">
+<div class="col-md-{{this.panelWidth}}" *ngIf="links?.length !== 0">
     <div class="panel panel-info">
         <div class="panel-heading panel_hdr"><span class="glyphicon glyphicon-eye-open"></span> &nbsp; <strong>{{panelTitle}}</strong>
             <span class="count"></span>
